--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -68,6 +68,44 @@ body {
   min-height: 100vh;
   height: 100vh;
   background: $blue;
+
+  &[data-shoe="1"] {
+    // background-color: #D8D9A0;
+    background-color: #d5d8bc;
+    color: #fff;
+
+    .hero {
+      &-background {
+        color: #b7ba99;
+      }
+
+      &-product {
+        &-name {
+          color: #828175;
+        }
+
+        &-button {
+          color: #828175;
+
+          &:hover {
+            background-color: #828175;
+            color: white;
+            border: 1px solid #828175;
+          }
+        }
+      }
+    }
+  }
+  &[data-shoe="2"] {
+  }
+  &[data-shoe="3"] {
+  }
+  &[data-shoe="4"] {
+  }
+  &[data-shoe="5"] {
+  }
+  &[data-shoe="6"] {
+  }
 }
 
 .header {
@@ -140,89 +178,6 @@ body {
   }
 }
 
-.hero {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: calc(100% - 10rem);
-  height: 100%;
-  padding: 0 5rem;
-
-  &-background {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    font-family: "Oswald", system-ui, Avenir, Helvetica, Arial, sans-serif;
-    font-size: 40rem;
-    font-weight: 700;
-    color: #112955;
-    text-transform: uppercase;
-    letter-spacing: 4rem;
-  }
-
-  &-header {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-
-    &-title {
-      display: flex;
-      flex-direction: column;
-      font-family: "Anta", system-ui, Avenir, Helvetica, Arial, sans-serif;
-      font-size: 8rem;
-      text-transform: uppercase;
-    }
-
-    p {
-      font-size: 1.2rem;
-      font-weight: 500;
-      max-width: 20rem;
-      line-height: 1.6;
-    }
-  }
-
-  &-product {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    position: absolute;
-    right: 5rem;
-
-    &-name {
-      font-size: 1.5rem;
-    }
-
-    &-price {
-      font-size: 3rem;
-    }
-
-    &-button {
-      background: $white;
-      color: $dark-blue;
-      border: none;
-      font-size: 1rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      padding: 1.5rem;
-      position: relative;
-      margin-top: 2rem;
-      z-index: 3;
-      border: 1px solid transparent;
-      transition: all 0.3s ease;
-
-      &:hover {
-        background-color: $dark-blue;
-        color: white;
-        border: 1px solid white;
-      }
-    }
-  }
-}
-
 .canvas-container {
   position: relative;
   width: 100%;
@@ -231,6 +186,89 @@ body {
 
   &:hover {
     cursor: url("/icon-3d-view.png") 25 25, auto;
+  }
+
+  .hero {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: calc(100% - 10rem);
+    height: 100%;
+    padding: 0 5rem;
+
+    &-background {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      font-family: "Oswald", system-ui, Avenir, Helvetica, Arial, sans-serif;
+      font-size: 40rem;
+      font-weight: 700;
+      color: #112955;
+      text-transform: uppercase;
+      letter-spacing: 4rem;
+    }
+
+    &-header {
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+
+      &-title {
+        display: flex;
+        flex-direction: column;
+        font-family: "Anta", system-ui, Avenir, Helvetica, Arial, sans-serif;
+        font-size: 8rem;
+        text-transform: uppercase;
+      }
+
+      p {
+        font-size: 1.2rem;
+        font-weight: 500;
+        max-width: 20rem;
+        line-height: 1.6;
+      }
+    }
+
+    &-product {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      font-weight: 700;
+      text-transform: uppercase;
+      position: absolute;
+      right: 5rem;
+
+      &-name {
+        font-size: 1.5rem;
+      }
+
+      &-price {
+        font-size: 3rem;
+      }
+
+      &-button {
+        background: $white;
+        color: $dark-blue;
+        border: none;
+        font-size: 1rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        padding: 1.5rem;
+        position: relative;
+        margin-top: 2rem;
+        z-index: 3;
+        border: 1px solid transparent;
+        transition: all 0.3s ease;
+
+        &:hover {
+          background-color: $dark-blue;
+          color: white;
+          border: 1px solid white;
+        }
+      }
+    }
   }
 }
 
