--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -413,8 +413,21 @@ body {
   justify-content: space-between;
   align-items: center;
 
+  @media (max-width: 1024px) {
+    width: calc(100% - 4rem);
+  }
+
+  @media (max-width: 640px) {
+    min-height: 60px;
+    justify-content: center;
+  }
+
   &-logo {
     height: 5rem;
+
+    @media (max-width: 640px) {
+      height: 3rem;
+    }
   }
 
   &-nav {
@@ -422,6 +435,14 @@ body {
     align-items: center;
     gap: 1rem;
     height: 100%;
+
+    @media (max-width: 1280px) {
+      gap: 0;
+    }
+
+    @media (max-width: 640px) {
+      display: none;
+    }
 
     &-item {
       text-transform: uppercase;
@@ -433,6 +454,10 @@ body {
       align-items: center;
       cursor: pointer;
       transition: color 0.3s ease;
+
+      @media (max-width: 1280px) {
+        padding: 0 1rem;
+      }
 
       &:before {
         content: "";
@@ -459,6 +484,10 @@ body {
     align-items: center;
     gap: 2rem;
 
+    @media (max-width: 640px) {
+      display: none;
+    }
+
     &-btn {
       border-radius: 9999px;
       background: white;
@@ -483,6 +512,8 @@ body {
   width: 100%;
   height: 100%; // or whatever height you want
   overflow: hidden;
+  display: flex;
+  align-items: center;
 
   &:hover {
     cursor: url("/icon-3d-view.png") 25 25, auto;
@@ -493,10 +524,20 @@ body {
     position: absolute;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
     width: calc(100% - 10rem);
-    height: 100%;
+    height: 80%;
     padding: 0 5rem;
+
+    @media (max-width: 1280px) {
+      justify-content: center;
+      height: 95%;
+    }
+
+    @media (max-width: 640px) {
+      width: calc(100% - 4rem);
+      padding: 0 2rem;
+    }
 
     &-background {
       position: absolute;
@@ -510,6 +551,11 @@ body {
       text-transform: uppercase;
       letter-spacing: 4rem;
       transition: color 0.3s ease;
+
+      @media (max-width: 640px) {
+        font-size: 12rem;
+        letter-spacing: 1rem;
+      }
     }
 
     &-header {
@@ -517,12 +563,38 @@ body {
       flex-direction: column;
       gap: 3rem;
 
+      @media (max-width: 1280px) {
+        gap: 0;
+      }
+
       &-title {
         display: flex;
         flex-direction: column;
+        gap: 1rem;
         font-family: "Anta", system-ui, Avenir, Helvetica, Arial, sans-serif;
-        font-size: 8rem;
+        font-size: 10rem;
         text-transform: uppercase;
+
+        @media (max-width: 1280px) {
+          flex-direction: row;
+          justify-content: center;
+          gap: 3rem;
+        }
+
+        @media (max-width: 1024px) {
+          font-size: 8rem;
+          gap: 2.5rem;
+        }
+
+        @media (max-width: 768px) {
+          font-size: 6rem;
+          gap: 2rem;
+        }
+
+        @media (max-width: 640px) {
+          font-size: 4rem;
+          gap: 1rem;
+        }
       }
 
       p {
@@ -530,6 +602,11 @@ body {
         font-weight: 500;
         max-width: 20rem;
         line-height: 1.6;
+
+        @media (max-width: 1280px) {
+          max-width: unset;
+          text-align: center;
+        }
       }
     }
 
@@ -540,7 +617,40 @@ body {
       font-weight: 700;
       text-transform: uppercase;
       position: absolute;
+      top: 50%;
       right: 5rem;
+      transform: translateY(-50%);
+      z-index: 4;
+      cursor: auto;
+
+      @media (max-width: 1280px) {
+        top: 55%;
+      }
+
+      @media (max-width: 1024px) {
+        bottom: 0;
+        top: unset;
+        transform: none;
+      }
+
+      @media (max-width: 640px) {
+        bottom: -0.5rem;
+        left: 2rem;
+        gap: 0;
+        width: calc(100% - 4rem);
+      }
+
+      &-informations {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        @media (max-width: 640px) {
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+        }
+      }
 
       &-name {
         font-size: 1.5rem;
@@ -560,10 +670,13 @@ body {
         text-transform: uppercase;
         padding: 1.5rem;
         position: relative;
-        margin-top: 2rem;
-        z-index: 3;
+        margin-top: 1rem;
         border: 1px solid transparent;
         transition: background 0.3s ease, color 0.3s ease;
+
+        @media (max-width: 640px) {
+          margin-top: 0.5rem;
+        }
 
         &:hover {
           background-color: $dark-blue;
@@ -573,17 +686,27 @@ body {
       }
     }
   }
-}
 
-canvas#webgl {
-  width: 100%;
-  height: 100%;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  background: transparent;
+  canvas#webgl {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    background: transparent;
+
+    @media (max-width: 1280px) {
+      top: 5rem;
+      left: -8rem;
+    }
+
+    @media (max-width: 1024px) {
+      top: 0;
+      left: 0;
+    }
+  }
 }
 
 .products {
@@ -662,6 +785,10 @@ canvas#webgl {
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE 10+ */
 
+    @media (max-width: 640px) {
+      padding: 1rem 2rem 2rem;
+    }
+
     &::-webkit-scrollbar {
       display: none; /* Chrome/Safari */
     }
@@ -677,7 +804,7 @@ canvas#webgl {
       text-transform: uppercase;
       box-shadow: 0px 8px 20px 3px rgba(0, 0, 0, 0.8);
       flex: 0 0 auto; // prevents shrinking, allows horizontal scroll
-      min-width: 20rem; // or whatever fits your design
+      // min-width: 20rem; // or whatever fits your design
       // scroll-snap-align: start; // optional for snapping
       transition: color 0.3s ease, box-shadow 0.3s ease;
       cursor: pointer;
