--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -657,7 +657,7 @@ body {
       @media (max-width: 640px) {
         bottom: -0.5rem;
         left: 2rem;
-        gap: 0;
+        gap: 0.5rem;
         width: calc(100% - 4rem);
       }
 
